added routes, modules, pages

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,2 @@
-<p>about works!</p>
+<h3>Hi! My name is Max, and I enjoy learning.</h3>
+<p>I'm a construction professional, but I picked up a passion for full-stack web development when we were all locked inside in 2020.    </p>
