--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,1 +1,41 @@
-<p>hero works!</p>
+<div style="min-height: 450px; background-color: black; color:white;padding:25px">
+  <h1>Not your average electrical estimator...</h1>
+  <h4>Let's have a look:</h4>
+  <div class="module-container">
+
+    <mat-card routerLink="/engineering">
+      <mat-card-title>
+        Engineering
+      </mat-card-title>
+    </mat-card>
+    <mat-card routerLink="/dev">
+      <mat-card-title>
+        Full-Stack Development
+      </mat-card-title>
+    </mat-card>
+    <mat-card routerLink="/aerial">
+      <mat-card-title>
+        Aerial Systems
+      </mat-card-title>
+    </mat-card>
+  </div>
+</div>
+
+<div class="module-container">
+
+  <mat-card routerLink="/engineering">
+    <mat-card-title>
+      Bio
+    </mat-card-title>
+  </mat-card>
+  <mat-card routerLink="/dev">
+    <mat-card-title>
+      Resume
+    </mat-card-title>
+  </mat-card>
+  <mat-card routerLink="/aerial">
+    <mat-card-title>
+      Contact
+    </mat-card-title>
+  </mat-card>
+</div>
