--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,6 +1,7 @@
 @import '_page.scss';
 @import '_toolbar.scss';
 @import '_fonts.scss';
+@import './components/components.scss';
 
 html, body { height: 100%; }
 body { margin: 0; }
