building out portfolio pages

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
               padding-bottom: 0px;
             "
           >
-            MAX M. GELLER
+            MAX GELLER
           </h2>
         </mat-list-item>
       </mat-nav-list>
