--- a/src/app/modules/dev/dev.component.html
+++ b/src/app/modules/dev/dev.component.html
@@ -2,10 +2,10 @@
   <mat-nav-list fxLayout="row">
     <mat-list-item routerLink="/dev/overview">Overview</mat-list-item>
     <mat-list-item routerLink="/dev/approach">Approach</mat-list-item>
-    <mat-list-item>Tooling</mat-list-item>
-    <mat-list-item>Portfolio</mat-list-item>
-    <mat-list-item>Goals</mat-list-item>
-    <mat-list-item>Clients</mat-list-item>
+    <mat-list-item routerLink="/dev/tooling">Tooling</mat-list-item>
+    <mat-list-item routerLink="/dev/portfolio">Portfolio</mat-list-item>
+    <mat-list-item routerLink="/dev/goals">Goals</mat-list-item>
+    <mat-list-item routerLink="/dev/clients">Clients</mat-list-item>
 
   </mat-nav-list>
 </mat-toolbar>
