--- a/src/app/modules/aerial/pages/goals/goals.component.html
+++ b/src/app/modules/aerial/pages/goals/goals.component.html
@@ -1,1 +1,9 @@
-<p>goals works!</p>
+<h3>Goals</h3>
+<ul>
+  <li>I'd like to improve the access, effectiveness, and functionality of UAS recovery systems.</li>
+  <li>I would like to improve the practicality of long-range flight. construct a 5G-enabled UAS fixed wing.</li>
+
+  <li>I would like to participate in industry-wide conversations regarding UAS regulation.</li>
+</ul>
+
+
