--- a/src/app/modules/aerial/pages/overview/overview.component.html
+++ b/src/app/modules/aerial/pages/overview/overview.component.html
@@ -1,27 +1,17 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
-  <mat-nav-list fxLayout="row">
-    <mat-list-item>Overview</mat-list-item>
-    <mat-list-item>Approach</mat-list-item>
-    <mat-list-item>Tooling</mat-list-item>
-    <mat-list-item>Portfolio</mat-list-item>
-    <mat-list-item>Goals</mat-list-item>
-    <mat-list-item>Clients</mat-list-item>
-  </mat-nav-list>
-</mat-toolbar>
-<div class="page-layout">
-  <h2>Background</h2>
-  <p>
-    I've always maintained a fascination with electronics and flight. In 2015 I
-    build my first FPV drone, and more recently became an FAA Part 107 Pilot in
-    2019.
-  </p>
-  <h2>PROJECTS:</h2>
+<h2>Background</h2>
+<p>
+  I've always maintained a fascination with electronics and flight. In 2015 I
+  build my first FPV drone, and more recently became an FAA Part 107 Pilot in
+  2019. These days, I focus on cinematic and stock footage.
+</p>
+<p>You can take a look at some recent art here:</p>
+<p>Or if you'd like to purchase stock media, you can find it here:</p>
+<h2>PROJECTS:</h2>
 
-  <h2>Interests</h2>
-  <ul>
-    <li>Design & Development</li>
-    <li>Recovery Systems</li>
-    <li>FPV Drones</li>
-    <li>Image Analysis</li>
-  </ul>
-</div>
+<h2>Interests</h2>
+<ul>
+  <li>UAS Design & Development</li>
+  <li>Recovery Systems</li>
+  <li>FPV (First-Person-View) Quads</li>
+  <li>Image Analysis</li>
+</ul>
