updating pages, content

--- a/src/app/modules/dev/pages/approach/approach.component.html
+++ b/src/app/modules/dev/pages/approach/approach.component.html
@@ -1,1 +1,78 @@
-<p>approach works!</p>
+<h2>Background</h2>
+<p>The Web Development environment changes very rapidly.</p>
+<p>
+  It's not really a linear experience. Different trends pinch developers to
+  learn different things in different orders.
+</p>
+<p>
+  I started in web development in 1999 (I was 12 years old) learning the basics
+  HTML and CSS. When WordPress came out with PHP-driven templates in 2006, it
+  was a natural fit.
+</p>
+<p>Computer Science</p>
+<p>Web hosting</p>
+<p>Graphic Design</p>
+<p>SQL and relational data</p>
+<p>
+  Since that time, I've focused heavily on rounding out my knowledge with
+  Javascript. Specifically, NodeJS has enabled moder full-stack web development
+  using JavaScript.
+</p>
+
+
+
+
+
+<h2>Driving Concepts</h2>
+
+<ul>
+  <li>
+    Think First. And when you're done thinking, think some more. I tend to spend
+    a long time thinking about the code I'm going to write. Mostly because I
+    only want to write it once.
+  </li>
+  <li>
+    You can absolutely learn web development and build something cool at the
+    same time. So do it that wasy.
+  </li>
+  <li>
+    Make it fun for the developer. Developer hapiness and productivity will
+    follow
+  </li>
+  <li>
+    Develop your own 'workflow' and develop a robust ecosystem of personal
+    libraries, components and starters.
+  </li>
+  <li>
+    Aesthetics are everything. Technology should be playful and fun to use by
+    the end user.
+  </li>
+  <li>
+    Spend your time on the core tech. Unless you're just getting started
+    learning how to code. If that's the case, don't start with the core tech. Do
+    everything but the core tech. Save that $hit for last., but don't forget to
+    start with
+  </li>
+  <li>Functional-first, OOP second</li>
+  <li>Minimize read/writes</li>
+  <li>Iterate... where it makes sense</li>
+  <li>Go asynchronous</li>
+  <li>Separation of concerns</li>
+  <li>Document the $hit out of it</li>
+  <li>Finish the task</li>
+  <li>Don't repeat code</li>
+  <li>Data should always be encrypted</li>
+  <li>Data should be prepared for mining by ML/AI</li>
+  <li>Understand Cloud Pricing Constraints</li>
+  <li>Minimize bundle size</li>
+  <li>Don't neglect testing</li>
+  <li>Send it. Full Send.</li>
+</ul>
+
+
+<h2>TrendSpotting</h2>
+<ul>
+  <li>E2E encryption </li>
+  <li>BI / Analytics </li>
+  <li>AI/ML should be </li>
+</ul>
