--- a/src/app/modules/dev/pages/tooling/tooling.component.html
+++ b/src/app/modules/dev/pages/tooling/tooling.component.html
@@ -1,1 +1,29 @@
-<p>tooling works!</p>
+<h2>Developer Environment / IDE</h2>
+<ul>
+  <li>C# / .NET: Visual Studio </li>
+  <li>Literally Everything Else: Visual Studio Code</li>
+</ul>
+<h2>Javascript Runtime:</h2>
+
+<h3>NodeJS</h3>
+<p>NodeJS is the glue of modern front-end.</p>
+
+<h2>Javascript Frameworks:</h2>
+<ul>
+  <li>Enterprise: Angular</li>
+  <li>Modern Web App: React/ NextJS</li>
+  <li>Rapid Prototyping: React / Vue</li>
+  <li>Static Web Page: GatsbyJS / Next JS</li>
+</ul>
+
+<h2>Graphic Design</h2>
+<ul>
+  <li>Figma</li>
+  <li>Adobe Illustrator</li>
+</ul>
+
+<h2>UI Documentation</h2>
+<ul>
+  <li>Bit</li>
+  <li>Storybook</li>
+</ul>
