--- a/src/app/modules/engineering/engineering.component.html
+++ b/src/app/modules/engineering/engineering.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
   <mat-nav-list fxLayout="row">
     <mat-list-item routerLink="/aerial/overview">Overview</mat-list-item>
-    <mat-list-item routerLink="/aerial/services">Services</mat-list-item>
-    <mat-list-item routerLink="/aerial/fpv">FPV</mat-list-item>
-    <mat-list-item routerLink="/aerial/fleet">Fleet</mat-list-item>
+    <mat-list-item routerLink="/aerial/approach">Approach</mat-list-item>
+    <mat-list-item routerLink="/aerial/software">Projects</mat-list-item>
+    <mat-list-item routerLink="/aerial/skills">Skills</mat-list-item>
+    <mat-list-item routerLink="/aerial/examples">Examples</mat-list-item>
     <mat-list-item routerLink="/aerial/goals">Goals</mat-list-item>
-    <mat-list-item routerLink="/aerial/gallery">Gallery</mat-list-item>
   </mat-nav-list>
 </mat-toolbar>
 <div class="page-layout">
