--- a/src/app/modules/engineering/pages/overview/overview.component.html
+++ b/src/app/modules/engineering/pages/overview/overview.component.html
@@ -1,14 +1,4 @@
-<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
-  <mat-nav-list fxLayout="row">
-    <mat-list-item>Overview</mat-list-item>
-    <mat-list-item>Approach</mat-list-item>
-    <mat-list-item>Tooling</mat-list-item>
-    <mat-list-item>Portfolio</mat-list-item>
-    <mat-list-item>Goals</mat-list-item>
-    <mat-list-item>Clients</mat-list-item>
-  </mat-nav-list>
-</mat-toolbar>
-<div class="page-layout">
+
   <h2>Background</h2>
   <p>
     I've always maintained a fascination with electronics and flight. In 2015 I
@@ -18,13 +8,13 @@
 
   <h2>Interests</h2>
   <ul>
-    <li>Design & Development</li>
-    <li>Recovery Systems</li>
-    <li>FPV Drones</li>
-    <li>Image Analysis</li>
+    <li>Electrical Engineering</li>
+    <li>Telecom Design</li>
+    <li>Construction Estimating</li>
+    <li>Cost Analysis / BI</li>
+    <li>Electronics / PCB Design</li>
+    <li>Network / IT</li>
   </ul>
 
   <h2>Project Involvement</h2>
 
-
-</div>
