updating portfolio modules

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -5,17 +5,22 @@
 
     <mat-card routerLink="/engineering">
       <mat-card-title>
-        Engineering
+        Construction / Engineering
       </mat-card-title>
     </mat-card>
     <mat-card routerLink="/dev">
       <mat-card-title>
-        Full-Stack Development
+        Web / Software Development
       </mat-card-title>
     </mat-card>
     <mat-card routerLink="/aerial">
       <mat-card-title>
         Aerial Systems
+      </mat-card-title>
+    </mat-card>
+    <mat-card routerLink="/training">
+      <mat-card-title>
+        Training & Instruction
       </mat-card-title>
     </mat-card>
   </div>
