--- a/src/app/modules/aerial/aerial.component.html
+++ b/src/app/modules/aerial/aerial.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
   <mat-nav-list fxLayout="row">
     <mat-list-item routerLink="/aerial/overview">Overview</mat-list-item>
-    <mat-list-item routerLink="/aerial/services">Services</mat-list-item>
+    <mat-list-item routerLink="/aerial/stock">Stock</mat-list-item>
     <mat-list-item routerLink="/aerial/fpv">FPV</mat-list-item>
     <mat-list-item routerLink="/aerial/fleet">Fleet</mat-list-item>
-    <mat-list-item routerLink="/aerial/goals">Goals</mat-list-item>
+    <mat-list-item routerLink="/aerial/customs">Customs</mat-list-item>
     <mat-list-item routerLink="/aerial/gallery">Gallery</mat-list-item>
   </mat-nav-list>
 </mat-toolbar>
