--- a/src/app/modules/training/training.component.html
+++ b/src/app/modules/training/training.component.html
@@ -1,2 +1,4 @@
-
+<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
+  <h2>TRAINING & INSTRUCTION</h2>
+</mat-toolbar>
 <router-outlet></router-outlet>
