--- a/src/app/modules/aerial/aerial.component.html
+++ b/src/app/modules/aerial/aerial.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
+  <h2>AERIAL SYSTEMS</h2>
+</mat-toolbar>
+<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
   <mat-nav-list fxLayout="row">
     <mat-list-item routerLink="/aerial/overview">Overview</mat-list-item>
     <mat-list-item routerLink="/aerial/stock">Stock</mat-list-item>
