--- a/src/app/modules/dev/dev.component.html
+++ b/src/app/modules/dev/dev.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
+  <h2>WEB / SOFTWARE DEVELOPMENT</h2>
+</mat-toolbar>
+<mat-toolbar fxLayout="row" fxLayoutAlign="center center">
   <mat-nav-list fxLayout="row">
     <mat-list-item routerLink="/dev/overview">Overview</mat-list-item>
     <mat-list-item routerLink="/dev/approach">Approach</mat-list-item>
