updating content, styles

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,2 +1,3 @@
 <h3>Hi! My name is Max, and I enjoy learning.</h3>
+<h3>Raised by 90s Music</h3>
 <p>I'm a construction professional, but I picked up a passion for full-stack web development when we were all locked inside in 2020.    </p>
