--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,44 +1,27 @@
-<div style="min-height: 450px; background-color: black; color:white;padding:25px">
+<div style="min-height: 350px; background-color: black; color:white;padding:25px">
   <h1>Not your average electrical estimator...</h1>
   <h4>Let's have a look:</h4>
-  <div class="module-container">
 
-    <mat-card routerLink="/engineering">
-      <mat-card-title>
-        Construction / Engineering
-      </mat-card-title>
-    </mat-card>
-    <mat-card routerLink="/dev">
-      <mat-card-title>
-        Web / Software Development
-      </mat-card-title>
-    </mat-card>
-    <mat-card routerLink="/aerial">
-      <mat-card-title>
-        Aerial Systems
-      </mat-card-title>
-    </mat-card>
-    <mat-card routerLink="/training">
-      <mat-card-title>
-        Training & Instruction
-      </mat-card-title>
-    </mat-card>
-  </div>
 </div>
 
 <div class="module-container">
 
-  <mat-card routerLink="/engineering">
+  <mat-card routerLink="/bio">
     <mat-card-title>
       Bio
     </mat-card-title>
   </mat-card>
-  <mat-card routerLink="/dev">
+  <mat-card routerLink="/gallery">
+    <mat-card-title>
+      Gallery
+    </mat-card-title>
+  </mat-card>
+  <mat-card routerLink="/resume">
     <mat-card-title>
       Resume
     </mat-card-title>
   </mat-card>
-  <mat-card routerLink="/aerial">
+  <mat-card routerLink="/contact">
     <mat-card-title>
       Contact
     </mat-card-title>
