--- a/src/app/modules/engineering/engineering.component.html
+++ b/src/app/modules/engineering/engineering.component.html
@@ -3,12 +3,12 @@
 </mat-toolbar>
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
   <mat-nav-list fxLayout="row">
-    <mat-list-item routerLink="/aerial/overview">Overview</mat-list-item>
-    <mat-list-item routerLink="/aerial/approach">Approach</mat-list-item>
-    <mat-list-item routerLink="/aerial/software">Projects</mat-list-item>
-    <mat-list-item routerLink="/aerial/skills">Skills</mat-list-item>
-    <mat-list-item routerLink="/aerial/examples">Examples</mat-list-item>
-    <mat-list-item routerLink="/aerial/goals">Goals</mat-list-item>
+    <mat-list-item routerLink="/engineering/overview">Overview</mat-list-item>
+    <mat-list-item routerLink="/engineering/approach">Approach</mat-list-item>
+    <mat-list-item routerLink="/engineering/projects">Projects</mat-list-item>
+    <mat-list-item routerLink="/engineering/skills">Skills</mat-list-item>
+    <mat-list-item routerLink="/engineering/examples">Examples</mat-list-item>
+    <mat-list-item routerLink="/engineering/goals">Goals</mat-list-item>
   </mat-nav-list>
 </mat-toolbar>
 <div class="page-layout">
