--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,24 @@
 <app-hero> </app-hero>
+<h5>Topics</h5>
+<div class="module-container" fxLayout="row">
+  <mat-card routerLink="/engineering"> Construction / Engineering </mat-card>
+  <mat-card routerLink="/dev"> Web / Software Development </mat-card>
+  <mat-card routerLink="/aerial"> Aerial Systems </mat-card>
+  <mat-card routerLink="/training"> Training & Instruction </mat-card>
+</div>
+
+<h5>Why will folks go to this site?</h5>
+<ul>
+  <li>Someone wants to hire me (construction)</li>
+  <li>Family/Friends</li>
+  <li>Looking me up from Presidio Cost Solutions</li>
+  <li>Looking me up from Mesa Aerial</li>
+  <li>Someone wants to develop application</li>
+  <li>Someone wants to hire me</li>
+  <li>Random visitor, knows nothing about me</li>
+  <li>Someone from LinkedIn wants to learn more</li>
+</ul>
+
 <div class="page-layout">
   <app-about></app-about>
   <app-skills></app-skills>
