--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -10,31 +10,31 @@ p {
 }
 
 h1 {
-  font-weight: 400;
+  font-size: 30;
+  font-weight: 500;
 }
 
 h2 {
-  font-weight: 400;
-  margin-bottom: 0px;
+  font-size: 26;
+  font-weight: 600;
 }
 
 h3 {
-  font-weight: 350;
+  font-size: 24;
+  font-weight: 700;
+}
+
+h4 {
+  font-size: 22;
+  font-weight: 800;
 }
 
 h5 {
+  font-size: 20;
+  font-weight: 800;
 }
-.mat-nav-list {
-  .mat-list-item {
-    font-size: 13px !important;
-    font-weight: 650;
-  }
-  :hover {
-    color: rgb(19, 199, 19);
-  }
-}
+
 
 mat-divider {
   color: rgb(227, 230, 230);
-  margin-bottom: 8px !important;
 }
