configuring home module

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,23 +1,1 @@
-<mat-divider></mat-divider>
-<div style="padding: 12px">
-  <h5 style="margin-bottom: 0px; margin-top: 0px; font-size: 13px; font-weight: 300">
-   INVESTMENT DISCLAIMER:
-  </h5>
-  <p style="font-size: 11px; font-weight: 300; margin-top: 0px">
-    This website is distributed for general informational and educational
-    purposes only and is not intended to constitute legal, tax, accounting or
-    investment advice. The information, opinions and views contained herein have
-    not been tailored to the investment objectives of any one individual, are
-    current only as of the date hereof and may be subject to change at any time
-    without prior notice.Nothing contained in this website should be construed
-    as investment advice. Any reference to an investment’s past or potential
-    performance is not, and should not be construed as, a recommendation or as a
-    guarantee of any specific outcome or profit. I expressly disclaim any
-    liability or loss incurred by any person who acts on the information, ideas
-    or strategies discussed herein. The information contained herein is not, and
-    shall not constitute an offer to sell, a solicitation of an offer to buy or
-    an offer to purchase any securities, nor should it be deemed to be an offer,
-    or a solicitation of an offer, to purchase or sell any investment product or
-    service.
-  </p>
-</div>
+<mat-toolbar class="footer">Here's a toolbar</mat-toolbar>
