--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar" color="primary">
+<mat-toolbar class="navbar" >
   <div fxLayout="row" fxLayoutAlign="center center" fxFlex >
     <div fxLayout="column"  fxFlex>
       <mat-nav-list>
